force-app/main/default/objects/AAO_Answer__c/AAO_Answer__c.object-meta.xml
<CustomObject>
    <description>The current-state row. Upserted. One per question per subject. Carries the accumulated quotes. Distinct from ALTF__Answer__c, the assessment answer.</description>
    <label>AAO Answer</label>
    <nameField>
        <displayFormat>ANS-{00000000}</displayFormat>
        <label>AAO Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>