force-app/main/default/objects/AAO_Answer__c/fields/AAO_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Basis__c</fullName>
    <description>Written by: Commit. Read by: the evidence-family law, and anyone asking what kind of evidence this answer stands on. THE UNION OF THE CLAIMS THAT BUILT IT: an answer established from a transcript and later reinforced by a state read reads Both, which is what Both has always meant. Added 1 Aug 2026 as an extension of ruling 47, which named Candidate and Claim; Answer carried the same assumption in a third form (its trigger required spans of every machine establishment) and could not be corrected without it. RATIFIED 48, 1 Aug 2026, union semantics included.</description>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>