force-app/main/default/objects/AAO_Answer__c/fields/AAO_Charter_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter_Version__c</fullName>
    <description>Written by: Commit. Read by: Which rules produced this.</description>
    <label>Charter Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>