force-app/main/default/objects/AAO_Answer__c/fields/AAO_Element_Coverage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Element_Coverage__c</fullName>
    <description>JSON. Written by: Commit. Read by: What is covered and what is missing. The flag over partial coverage reads this.</description>
    <label>Element Coverage</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>