force-app/main/default/objects/AAO_Answer__c/fields/AAO_Established_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Established_By__c</fullName>
    <description>Written by: Commit. Read by: A write is MACHINE only if it carries a charter stamp. Everything else is HUMAN, because misreading a machine write as human costs one overwrite and misreading a human write as machine destroys a person judgment.</description>
    <label>Established By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MACHINE</fullName>
            </value>
            <value>
                <fullName>HUMAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>