force-app/main/default/objects/AAO_Answer__c/fields/AAO_Evidence_Contract__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Contract__c</fullName>
    <description>Written by: Commit. Read by: Which question this answers.</description>
    <label>Evidence Contract</label>
    <type>Lookup</type>
    <referenceTo>AAO_Evidence_Contract__c</referenceTo>
    <relationshipName>AAO_Answers</relationshipName>
    <relationshipLabel>AAO Answers</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>