force-app/main/default/objects/AAO_Answer__c/fields/AAO_Evidence_Occurred__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Occurred__c</fullName>
    <description>Written by: Commit. Read by: When the establishing evidence happened, not when we processed it.</description>
    <label>Evidence Occurred</label>
    <type>DateTime</type>
</CustomField>