force-app/main/default/objects/AAO_Answer__c/fields/AAO_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>AAO_Interpretation__c</fullName>
    <description>Written by: Commit. Read by: The interpretation behind the current verdict.</description>
    <label>Interpretation</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>