force-app/main/default/objects/AAO_Answer__c/fields/AAO_Last_Claim__c.field-meta.xml
<CustomField>
    <fullName>AAO_Last_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit. Read by: The claim that most recently moved this. The frozen row beside the live one.</description>
    <label>Last Claim</label>
    <referenceTo>AAO_Claim__c</referenceTo>
    <relationshipLabel>AAO Last Claim For</relationshipLabel>
    <relationshipName>AAO_Last_Claim_For</relationshipName>
    <type>Lookup</type>
</CustomField>