force-app/main/default/objects/AAO_Answer__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <description>Written by: Commit. Read by: Scoping; roll-up; the live set.</description>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AAO_Answers</relationshipName>
    <relationshipLabel>AAO Answers</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>