force-app/main/default/objects/AAO_Answer__c/fields/AAO_Participant__c.field-meta.xml
<CustomField>
    <fullName>AAO_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Commit. Read by: projection, which resolves the Contact through it. THE ANSWER KEYS WHAT ITS CLAIMS KEY. Addendum 18 ruled the Claim onto the Participant; the Answer is the current-state row those claims must reconstruct exactly, so keying it on the Contact while the claims key the Participant would break the replay invariant for precisely the people the ruling was made for - a person with no Contact could carry claims and could not carry the answer they sum to. AAO_Subject_Contact__c stays for pre-ruling rows and for the resolved Contact where one exists.</description>
    <label>Participant</label>
    <referenceTo>AAO_Participant__c</referenceTo>
    <relationshipLabel>AAO Answers</relationshipLabel>
    <relationshipName>AAO_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>