force-app/main/default/objects/AAO_Answer__c/fields/AAO_Projected_Modstamp__c.field-meta.xml
<CustomField>
    <fullName>AAO_Projected_Modstamp__c</fullName>
    <description>Written by: Projection, outbound, captured at the instant of our write. Read by: The other half. A timestamp that moved while the value did not is a human confirmation, and it is the only evidence of one that exists. Cannot be reconstructed later.</description>
    <label>Projected Modstamp</label>
    <type>DateTime</type>
</CustomField>