force-app/main/default/objects/AAO_Answer__c/fields/AAO_Projected_Value__c.field-meta.xml
<CustomField>
    <fullName>AAO_Projected_Value__c</fullName>
    <description>Written by: Projection, outbound. Read by: Half of the compare-and-swap watermark.</description>
    <label>Projected Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>