force-app/main/default/objects/AAO_Answer__c/fields/AAO_Question_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>AAO_Question_Fingerprint__c</fullName>
    <description>Written by: Commit. Read by: Compared on read. A mismatch reads as the answer not counting, which is the failure direction we accept.</description>
    <label>Question Fingerprint</label>
    <type>Text</type>
    <length>64</length>
    <caseSensitive>true</caseSensitive>
</CustomField>