force-app/main/default/objects/AAO_Answer__c/fields/AAO_Rubric_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Rubric_Version__c</fullName>
    <description>Written by: Commit. Read by: Which rules produced this. Rubric version is an attribute, never identity.</description>
    <label>Rubric Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>