force-app/main/default/objects/AAO_Answer__c/fields/AAO_Spans__c.field-meta.xml
<CustomField>
    <fullName>AAO_Spans__c</fullName>
    <description>JSON. Written by: Commit, accumulating across claims. Read by: The current evidence set. This is what lets call two say there was already partial evidence and now it is sufficient.</description>
    <label>Spans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>