force-app/main/default/objects/AAO_Answer__c/fields/AAO_Subject_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit. Read by: Traversal, reporting by related record, lookup filters. Null-and-flag on subject delete.</description>
    <label>Subject Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAO Answer Subjects</relationshipLabel>
    <relationshipName>AAO_Answer_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>