force-app/main/default/objects/AAO_Answer__c/fields/AAO_Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Type__c</fullName>
    <description>Written by: Commit. Read by: The discriminator. Without it, opportunity-plus-proposition and opportunity-plus-contact-plus-dimension rows are indistinguishable to any query that does not already know what it is hunting.</description>
    <label>Subject Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Shadow_Person</fullName>
            </value>
            <value>
                <fullName>Insight_Card</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Decision_Criterion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>