force-app/main/default/objects/AAO_Answer__c/fields/AAO_Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Superseded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The canonical answer this row was reconciled into. Set at promotion when a person gains a Contact and a Contact-keyed answer for the same person and contract already stands. The superseded row keeps every claim, citation and verdict it was written with; it stops projecting and stops counting, and the canonical row replays through it. Nothing is deleted and no claim is ever edited - the org refuses that, and its refusal is why the merge happens at read time.</description>
    <label>Superseded By</label>
    <referenceTo>AAO_Answer__c</referenceTo>
    <relationshipLabel>Superseded Answers</relationshipLabel>
    <relationshipName>Superseded_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>