force-app/main/default/objects/AAO_Answer__c/fields/AAO_Verdict__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verdict__c</fullName>
    <description>Written by: Commit. Read by: The answer. Abstention and not-addressed never reach here.</description>
    <label>Verdict</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>UNVERIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>